# robo_trader

./: .CLAUDE.md  .aider.conf.yml  .bandit  .bugbotignore  .cursorrules  .dockerignore  .env.example  .env.template  .flake8  .gitignore  .mcp.json  .pre-commit-config.yaml  ACTION_PLAN.md  AGENTS.md  AI_CONVICTION_ANALYSIS.md  ALGORITHMIC_TRADING_SYSTEM_REVIEW.md  ANALYSIS_SUMMARY.md  BRANCH_ANALYSIS_REPORT.md  BUS_ERROR_INVESTIGATION.md  CI_LINT_FIXES_SUMMARY.md  CLAUDE.md  CLAUDE_TRADING_PROMPT.md  CODE_REVIEW_AND_FIXES.md  CODE_REVIEW_REMAINING_WORK.md  COMMIT_NOTES.md  CONNECTION_BUG_ANALYSIS.md  CONNECTION_TIMEOUT_ROOT_CAUSE_AND_FIX.md  CRITICAL_BUG_FIXES_SUMMARY.md  DASHBOARD_ENHANCEMENTS.md  DASHBOARD_IMPROVEMENTS.md  DECIMAL_PRECISION_FIX.md  DEV_SETUP.md  DOCKER_README.md  Dockerfile  EFFICIENCY_ANALYSIS_REPORT.md  FINAL_SECURITY_AUDIT_REPORT.md  FINAL_SOLUTION_PLAN.md  FIX_COMPLETE_READY_TO_TEST.md  FLOAT_ARITHMETIC_FIXES_SUMMARY.md  GATEWAY_DISCONNECT_BUG_FIX.md  (+208 more)
.claude/: sync-docs.py
.codex/: config.toml
.cursor/: BUGBOT.md  environment.json
.devcontainer/: devcontainer.json
PRODUCTION_READINESS/: tracking.json
archived_plans/: PROJECT_PLAN_9PHASE.md  app_old.py
bugbot-report/: bug-report.json
code_review/: 2025-08-24_1430_code_review.md
config/: monitoring_config.json
data/: risk_state.json  test_risk_state.json
deployment/: README.md  docker-compose.prod.yml  entrypoint.sh  nginx.conf  prometheus.yml
docs/: CI_WORKFLOW_FIXES_SUMMARY.md  FIXES_SUMMARY_2025-10-19.md  IBKR_PORT_AUTO_DETECTION.md  MULTIUSER_PLAN.md  MULTI_AGENT_WORKFLOW.md  PARALLEL_CLAUDE_SETUP.md  README.md  REMOTE_ACCESS.md  SIGNAL_FLOW_AND_KELLY.md  SUBPROCESS_WORKER_CONNECTION_FIX.md  TELEGRAM_SETUP.md  TIMEOUT_AND_RESOURCE_LEAK_FIXES.md  ZOMBIE_CONNECTION_CLEANUP.md  codespaces.md  codex_cloud_integration.md  configuration.md  dashboard_risk_tab_backend_followup.md  dashboard_risk_tab_notes.md  live-safeguards.md  risk-policy.md  strategies.md
handoff/: 2025-01-11_1615_handoff.md  2025-01-11_1624_handoff.md  2025-01-11_1841_handoff.md  2025-01-27_1430_handoff.md  2025-08-21_1521_handoff.md  2025-08-21_1617_handoff.md  2025-08-21_1923_handoff.md  2025-08-21_1955_handoff.md  2025-08-21_2005_handoff.md  (+152 more)
(+699 files in other folders)
