 [build-system]
 requires = ["setuptools>=61"]
 build-backend = "setuptools.build_meta"

 [project]
 name = "robo_trader"
 version = "0.1.0"
 description = "IBKR paper-trading scaffold with risk controls and tests"
 requires-python = ">=3.10"
 authors = [{ name = "Oliver" }]
 dependencies = []

 [tool.setuptools]
 packages = ["robo_trader"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | clientportal.gw
  | root
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

